# chip8rtic

./: Cargo.toml  Embed.toml  README.md  build.rs  debug.gdb  memory.x
.cargo/: config
src/: blinker.rs  keypad.rs  main.rs  random.rs  screen.rs
