[package]
name = "chip8rtic"
version = "0.8.0"
authors = ["Arturo J. Pérez <arturjosep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8vm = { git = "https://github.com/arturjpv/chip8vm" }
panic-halt = "0.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-rtic = "0.5"

[dependencies.rtt-target]
features = ["cortex-m"]
version = "0.2.0"

[dependencies.stm32f3xx-hal]
version = "0.5.0"
features = ["stm32f303xc", "rt", "unproven"]

[[bin]]
name = "chip8rtic"
test = false
bench = false

[profile.dev]
opt-level = 0
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 3
rpath = false

[profile.release]
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
